# logx

./: .gitignore  CONTRIBUTING.md  LICENSE  Logger.cpp  Logger.h  README.md
asm/: buggedd.asm  logger.asm  logx.asm
c/: buggedd.h  logger.h  logx.h  logx_linux.c  logx_linux.h  logx_windows.c  logx_windows.h
cpp/: Buggedd.h  Logger.cpp  Logger.h  logx.h  logx_linux.cpp  logx_linux.h  logx_windows.cpp  logx_windows.h
go/: buggedd.go  logger.go  logx.go  logx_test.go
java/: Buggedd.java  Logger.java  logx.java
js/: logger.js  package.json
python/: README.md  logger.py  pyproject.toml
python/logn.egg-info/: PKG-INFO  SOURCES.txt
python/logx.egg-info/: PKG-INFO  SOURCES.txt
python/py_logn.egg-info/: PKG-INFO  SOURCES.txt
python/py_logx.egg-info/: PKG-INFO  SOURCES.txt
python/python_logx.egg-info/: PKG-INFO  SOURCES.txt
rust/: Cargo.toml  buggedd.rs  logx.rs
rust/tests/: integration.rs
test/asm/: test_logx.asm
test/c/: test_logx.c
test/cpp/: test_logx.cpp
test/java/: TestLogx.java
test/js/: test.js
test/python/: test_logx.py
test/ts/: test.ts
ts/: logx.d.ts  logx.js  logx.ts  package.json  tsconfig.json
zig/: logger.zig  logx.zig  test_logx.zig
